--- a/glade/repetitive_conditions.glade
+++ b/glade/repetitive_conditions.glade
@@ -3886,7 +3886,7 @@
                                             <property name="secondary_icon_activatable">False</property>
                                             <property name="primary_icon_sensitive">True</property>
                                             <property name="secondary_icon_sensitive">True</property>
-                                            <property name="adjustment">6 0.10000000000000001 99 0 0 0</property>
+                                            <property name="adjustment">6 0.10000000000000001 99 0.10000000000000001 1 0</property>
                                             <property name="climb_rate">1</property>
                                             <property name="digits">2</property>
                                           </widget>
