--- a/glade/app1.glade
+++ b/glade/app1.glade
@@ -20391,7 +20391,7 @@ then click this button.</property>
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
                                                             <property name="xalign">0</property>
-                                                            <property name="label" translatable="yes">Mode:</property>
+                                                            <property name="label" translatable="yes">Mode</property>
                                                             </widget>
                                                             <packing>
                                                             <property name="expand">True</property>
