--- a/glade/app1.glade
+++ b/glade/app1.glade
@@ -1613,6 +1613,9 @@
                                                             <placeholder/>
                                                             </child>
                                                             <child>
+                                                            <placeholder/>
+                                                            </child>
+                                                            <child>
                                                             <widget class="GtkLabel" id="label_start_selector_jumps">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
@@ -2597,7 +2600,7 @@ EncoderInertialCapture</property>
                                                             <property name="has_tooltip">True</property>
                                                             <property name="tooltip" translatable="yes">New persons (multiple)</property>
                                                             <property name="relief">half</property>
-                                                            <signal name="clicked" handler="on_person_add_multiple_clicked" swapped="no"/>
+                                                            <signal name="clicked" handler="on_person_add_multiple_from_main_gui" swapped="no"/>
                                                             <child>
                                                             <widget class="GtkVBox" id="vbox92">
                                                             <property name="visible">True</property>
@@ -22061,6 +22064,9 @@ then click this button.</property>
                                                             <property name="x_options"/>
                                                             <property name="y_options"/>
                                                             </packing>
+                                                            </child>
+                                                            <child>
+                                                            <placeholder/>
                                                             </child>
                                                             <child>
                                                             <placeholder/>
